<resources>
    <string name="app_name">SafeRun</string>
    <string name="enter_name_hint">Enter Name Here</string>
    <string name="facilitator_btn">Facilitator</string>
    <string name="driver_btn">Driver</string>
    <string name="observer_btn">Observer</string>
    <string name="title_activity_launch_facilitator">LAUNCHFACILITATOR</string>
    <string name="organize_run">Organize New Run</string>
    <string name="start_run">Start Run Time!</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>
    <string name="observer_integer">Observers: 72</string>
    <string name="driver_integer">Drivers: 26</string>
    <string name="title_activity_facilitator_map_view">Map</string>
    <string name="facilitator_name">Facilitator Name: Angela</string>
    <string name="end_run">End Run</string>
    <string name="restart_time">Restart Time</string>
    <string name="elapsed_time">Elapsed Time: </string>
    <string name="exit_run_warning">Exit?\nThis will end the run!</string>
    <string name="end_run_question">End Run?</string>
    <string name="end_run_warning">All members will be notified</string>
    <string name="confirm_end_run_button">Yes</string>
    <string name="confirm_exit_run_button">Yes</string>
    <string name="go_back_button">Back</string>
    <string name="go_back_exit_button">Back</string>
    <string name="run_completed">Run Complete</string>
    <string name="total_time">Time Elapsed: </string>
    <string name="observers_list">Observers List: </string>
    <string name="final_exit_button">Done</string>
    <string name="join_run">Join Run</string>
    <string name="title_activity_driver_map_view">Map</string>
    <string name="driver_list_header">Driver</string>
    <string name="choice1">Dummy Text</string>
    <string name="choice2">Dummy Text</string>
    <string name="driver_role_desc">Description of the Driver Role.
                                    Description of the Driver Role.
                                    Description of the Driver Role.
                                    Description of the Driver Role.
                                    Description of the Driver Role. </string>
    <string name="driver_resolve_emergency">Clear Emergency</string>

    <string name="observer_list_header">Observers</string>
    <string name="observer_role_desc">Description of the Observer Role.
                                    Description of the Observer Role.
                                    Description of the Observer Role.
                                    Description of the Observer Role. </string>
    <string name="facilitator_role_desc">Description of Role\nDescription of Role\nDescription of Role\nDescription of Role</string>
    <string name="title_activity_observer_in_position">Map</string>
    <string name="observer_in_position">In Position!</string>
    <string name="title_activity_observer_map_view">Map</string>
    <string name="observer_create_emergency">EMERGENCY</string>
    <string name="observer_clear_emergency">CLEAR EMERGENCY</string>
    <string name="facilitator_header">Facilitator</string>
    <string name="drivers">Drivers</string>
    <string name="observers">Observers</string>
    <string name="summary_details">Summary Details\nSummary Details\nSummary Details</string>
    <string name="select_facilitator">Select Facilitator</string>
    <string name="green_list_names1" color="@color/colorLightGreen"><![CDATA[<font color=#6bec9c>Mike<br>]]></string>
    <string name="green_list_names2" color="@color/colorLightGreen"><![CDATA[<font color=#6bec9c>Tim<br>Mike<br>]]></string>
    <string name="green_list_names4" color="@color/colorLightGreen"><![CDATA[<font color=#6bec9c>Angela<br>Khal<br>Brian<br>]]></string>
    <string name="green_list_names3" color="@color/colorLightGreen"><![CDATA[<font color=#6bec9c>Gail<br>Somdeep<br>Gail<br>Somdeep<br>Gail<br>Somdeep<br>Gail<br>Somdeep<br>Gail<br>Somdeep<br>Gail<br>Somdeep<br>]]></string>
    <string name="red_list_names1" color ="@color/colorRed"><![CDATA[<font color=#fc0d1b>Scott<br>Suhani<br>]]></string>
    <string name="red_list_names2" color="@color/colorRed"><![CDATA[<font color=#fc0d1b>Joe<br>]]></string>
</resources>
