<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/observer_back_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/go_back_button"
        android:background="@drawable/driverbtn"
        android:textAppearance="@style/DriverButtonText"
        android:textAllCaps="false"
        android:onClick="observerGoBackToMain"
        android:enabled="true"
        />

    <TextView
        android:id="@+id/observer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observer_list_header">
    </TextView>

    <TextView
        android:id="@+id/observer_role_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observer_role_desc">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/observer_choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/observer_choice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice1" />

            <RadioButton
                android:id="@+id/observer_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice2" />

        </RadioGroup>

    </ScrollView>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/observer_join_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/join_run"
        android:background="@drawable/driverbtn"
        android:textAppearance="@style/DriverButtonText"
        android:textAllCaps="false"
        android:onClick="observerJoinRun"
        android:enabled="true"
        />

</LinearLayout>