<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:textAppearance="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/enter_name_hint"
        android:inputType="textCapWords"
        android:imeOptions="actionNone" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/facilitator_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/facilitator_btn"
        android:background="@drawable/facilitatorbtn"
        android:textAppearance="@style/ButtonText"
        android:textAllCaps="false"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/driver_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/driver_btn"
        android:background="@drawable/driverbtn"
        android:textAppearance="@style/ButtonText"
        android:textAllCaps="false"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/observer_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/observer_btn"
        android:background="@drawable/observerbtn"
        android:textAppearance="@style/ButtonText"
        android:textAllCaps="false"/>



</LinearLayout>
