<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:textAppearance="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/facilitator_name"
        android:layout_marginTop="25dp"
        />


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/driver_exit_run"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/go_back_exit_button"
        android:background="@drawable/facilitatorbtn"
        android:textAppearance="@style/FacilitatorButtonText"
        android:textAllCaps="false"
        android:onClick="goBackFromExit"
        android:enabled="true"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/exit_run_warning"
        android:layout_marginTop="25dp"
        />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/affirm_exit_run"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/confirm_exit_run_button"
        android:background="@drawable/facilitatorbtn"
        android:textAppearance="@style/FacilitatorButtonText"
        android:textAllCaps="false"
        android:onClick="endRunFromExit"
        android:enabled="true"/>
</LinearLayout>