<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/facilitator_exit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/exit"
        android:background="@drawable/driverbtn"
        android:textAppearance="@style/DriverButtonText"
        android:textAllCaps="false"
        android:onClick="exit"
        android:enabled="true"
        />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/facilitator_refresh_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/refresh"
        android:background="@drawable/driverbtn"
        android:textAppearance="@style/DriverButtonText"
        android:textAllCaps="false"
        android:onClick="refresh"
        android:enabled="true"
        />

    <TextView
        android:id="@+id/number_of_observers"
        android:textAppearance="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/observer_integer"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/number_of_drivers"
        android:textAppearance="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/driver_integer"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:fillViewport="true"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/list_of_observers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Observers">
            </TextView>

        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/list_of_drivers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Drivers">
            </TextView>

        </ScrollView>

    </LinearLayout>

    <Button
    style="?android:attr/borderlessButtonStyle"
    android:id="@+id/facilitator_start_run_time_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:text="@string/start_run"
    android:background="@drawable/driverbtn"
    android:textAppearance="@style/DriverButtonText"
    android:textAllCaps="false"
    android:onClick="startRunTime"
    android:enabled="true"
    />
</LinearLayout>