<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/driver_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="top"
        android:text="@string/go_back_button"
        android:background="@drawable/backbtn"
        android:textAppearance="@style/BackButton"
        android:textAllCaps="false"
        android:onClick="driverGoBackToMain"
        android:enabled="true"
        />

    <TextView
        android:id="@+id/driver_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textAppearance="@style/TitleText"
        android:text="@string/driver_list_header">
    </TextView>

    <TextView
        android:id="@+id/driver_role_description"
        android:text="@string/driver_role_desc"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:textAlignment="center"
        android:textAppearance="@style/DescText">>
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center">

        <RadioGroup
            android:id="@+id/choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </RadioGroup>

    </ScrollView>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/driver_join_run"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="10dp"
        android:text="@string/join_run"
        android:background="@drawable/biggreenbtn"
        android:textAppearance="@style/BigGreenButtonText"
        android:textAllCaps="false"
        android:onClick="driverJoinRun"
        android:enabled="true"
        />

</LinearLayout>