<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:textAppearance="@style/SmallText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/facilitator_name"
        android:textAlignment="center"
        android:gravity="center"
        />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/end_run"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/end_run"
            android:background="@drawable/bigredbtn"
            android:textAppearance="@style/SmallRedButtonText"
            android:textAllCaps="false"
            android:onClick="endRunConfirmation"
            android:enabled="true"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/restart_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/restart_time"
            android:background="@drawable/bigbluebtn"
            android:textAppearance="@style/SmallBlueButtonText"
            android:textAllCaps="false"
            android:onClick="restartTime"
            android:enabled="true"/>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        class="com.google.android.gms.maps.SupportMapFragment"
        />


    <Chronometer
        android:id="@+id/chronometer1"
        android:textColor="@color/colorGreyFont"
        android:textAppearance="@style/DescText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="2"
        android:text="Chronometer"/>

</LinearLayout>



<!--fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamkernel.saferun.FacilitatorMapView" /-->
